bugfix: pie chart logic fix and appearance upgrades

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
         <item name="android:layout_marginBottom">8dp</item>
     </style>
 
+    <style name="HeadlineText.Centered" parent="HeadlineText">
+        <item name="android:gravity">center</item>
+    </style>
+
     <style name="BodyText" parent="TextAppearance.AppCompat.Body1">
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
