--- a/app/src/main/res/layout/activity_coin_details.xml
+++ b/app/src/main/res/layout/activity_coin_details.xml
@@ -163,7 +163,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{coin.name}"
-                android:textAppearance="@style/HeadlineText"
+                style="@style/HeadlineText"
                 android:textSize="24sp"
                 tools:text="bnb" />
 
@@ -172,9 +172,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{coin.fullName}"
-                android:textAppearance="@style/BodyText"
+                style="@style/BodyText"
                 tools:text="Binance Coin" />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_chart_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            style="@style/HeadlineText.Centered"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="Description" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/chart_card"
@@ -183,8 +194,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="32dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_chart_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
@@ -193,7 +204,9 @@
                 android:id="@+id/supply_chart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="8dp" />
+                android:layout_margin="8dp">
+
+            </com.github.mikephil.charting.charts.PieChart>
 
         </androidx.cardview.widget.CardView>
 
